# learn-BTs-from-demo

./: .gitignore  README.md
behaviors/: setup.py
behaviors/behaviors/: behavior_lists.py  behavior_tree.py  common_behaviors.py
behaviors/tests/: behavior_list_test_settings.py  test_behavior_lists.py  test_behavior_tree.py
bt_learning/: setup.py
bt_learning/bt_learning/: __init__.py
bt_learning/bt_learning/learning_from_demo/: clustering.py  constraints_identification.py  debug.py  demonstration.py  goal_identification.py  learning.py  learning_postprocessing.py  lfd_behaviors.py  lfd_planner.py  render_tree.py
bt_learning/bt_learning/learning_from_demo/demonstrations/cube_in_box/: info.yaml
bt_learning/bt_learning/learning_from_demo/tests/: test_behavior.py  test_clustering.py  test_constraints.py  test_copyright.py  test_precondition_inference.py  util.py
bt_learning/bt_learning/learning_from_demo/tests/demo_test/: info.yaml
bt_learning/bt_learning/planner/: lfd_planner.py
bt_learning/doc/: demonstration.md
perception_layer/marker_detection/aruco_detection/: README.md  package.xml  setup.cfg  setup.py
perception_layer/marker_detection/aruco_detection/aruco_detection/: aruco_generate_marker.py  aruco_node.py  marker_publisher.py
perception_layer/marker_detection/aruco_detection/config/: marker_detection.yaml
perception_layer/marker_detection/aruco_interfaces/: CMakeLists.txt  package.xml
perception_layer/marker_detection/aruco_interfaces/srv/: Calibrate.srv
perception_layer/perception_utils/: package.xml  setup.cfg  setup.py
perception_layer/perception_utils/perception_utils/: homogeneous_matrix.py  transformations.py
perception_layer/perception_utils/test/: test_copyright.py  test_homogeneous_matrix.py  test_transformations.py
py_trees/: setup.py
py_trees/py_trees/: decorators.py  display.py
simulation/: setup.py
simulation/simulation/: py_trees_interface.py
simulation/simulation/learning_from_demo/: lfd_simulator.py
simulation/simulation/tests/: test_py_trees_interface.py
utilities/launch_utilities/: setup.py
utilities/launch_utilities/launch_utilities/: namespaces.py  process_templated_file.py
world_interface/abb_robot/: README.md
world_interface/abb_robot/abb_robot_driver_interfaces/abb_egm_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
world_interface/abb_robot/abb_robot_driver_interfaces/abb_rapid_msgs/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
world_interface/abb_robot/abb_robot_driver_interfaces/abb_rapid_msgs/msg/: ConfData.msg  ExtJoint.msg  JointTarget.msg  LoadData.msg  Orient.msg  Pos.msg  Pose.msg  RobJoint.msg  RobTarget.msg  ToolData.msg  WObjData.msg
world_interface/abb_robot/abb_robot_driver_interfaces/abb_rapid_sm_addin_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
world_interface/abb_robot/abb_robot_driver_interfaces/abb_robot_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
world_interface/abb_robot/abb_robot_driver_interfaces/abb_robot_msgs/msg/: MechanicalUnitState.msg  RAPIDSymbolPath.msg  RAPIDTaskState.msg  ServiceResult.msg  SystemState.msg
world_interface/abb_robot/abb_robot_driver_interfaces/abb_robot_msgs/srv/: GetFileContents.srv  GetIOSignal.srv  GetMechanicalUnitRobTarget.srv  GetRAPIDBool.srv  GetRAPIDDnum.srv  GetRAPIDNum.srv  GetRAPIDString.srv  GetRAPIDSymbol.srv  GetRobotControllerDescription.srv  GetSpeedRatio.srv  SetFileContents.srv  SetIOSignal.srv  SetRAPIDBool.srv  SetRAPIDDnum.srv  SetRAPIDNum.srv  SetRAPIDString.srv  SetRAPIDSymbol.srv  SetSpeedRatio.srv  TriggerWithResultCode.srv
world_interface/abb_robot/robot_behaviors/: setup.py
world_interface/abb_robot/robot_behaviors/tests/: test_match.py
world_interface/abb_robot/robot_bringup/: README.md
world_interface/abb_robot/robot_bringup/bringup/abb_yumi_bringup/: CMakeLists.txt  package.xml
world_interface/abb_robot/robot_bringup/bringup/abb_yumi_bringup/config/yumi/: core_template.yaml
world_interface/abb_robot/robot_bringup/bringup/abb_yumi_bringup/launch/: myumi.launch.py  yumi.launch.py  yumi_demo.launch.py
world_interface/abb_robot/robot_bringup/descriptions/subcomponents/abb_irb14000_description/: CMakeLists.txt  LICENSE  package.xml
world_interface/abb_robot/robot_bringup/descriptions/subcomponents/abb_irb14000_description/meshes/irb14000_05_50/collision/: robl_link_4.stl  robl_link_5.stl  robr_link_1.stl  robr_link_6.stl
world_interface/abb_robot/robot_bringup/descriptions/subcomponents/abb_irb14000_description/meshes/irb14000_05_50/visual/: robl_link_1.dae  robl_link_3.dae  robl_link_5.dae  robl_link_6.dae  robr_link_1.dae  robr_link_3.dae  robr_link_4.dae  robr_link_5.dae  robr_link_6.dae  robr_link_7.dae
world_interface/abb_robot/robot_bringup/descriptions/subcomponents/abb_irb14000_description/properties/irb14000_05_50/: gazebo.yaml  joints.yaml  transmissions.yaml
world_interface/abb_robot/robot_bringup/descriptions/subcomponents/abb_irb14000_description/urdf/: irb14000_05_50.xacro  irb14000_05_50_macro.xacro
world_interface/abb_robot/robot_interface/: package.xml  setup.cfg  setup.py
world_interface/abb_robot/robot_interface/config/: lfd_markers.yaml
world_interface/abb_robot/robot_interface/doc/: marker_LfD.md
world_interface/abb_robot/robot_interface/launch/: lfd.launch.py
world_interface/abb_robot/robot_interface/robot_interface/: behavior_list_settings.py  demonstration.py  interface.py  lfd_gui.py  lfd_utils.py  offline_yumi_itnerface.py  online_yumi_interface.py  plot_clusters.py  rapid_interface.py  tool_broadcaster.py
world_interface/abb_robot/robot_interface/tests/: test_actions.py  test_demonstration.py
world_interface/camera_interface/: package.xml  setup.cfg  setup.py
world_interface/camera_interface/camera_interface/: cube_publisher.py  fake_marker_pub.py
world_interface/camera_interface/config/: cube_detection.yaml
world_interface/camera_interface/launch/: yumi_cube.launch.py
world_interface/camera_interface/rviz/: yumi_marker.rviz
(+38 files in other folders)
