<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="SEMAIOV@todo.todo">SEMAIOV</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>abb_robot_msgs</depend>
  <depend>abb_rapid_sm_addin_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
