<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_irb14000_description</name>
  <version>0.1.0</version>
  <description>
    Description of ABB IRB14000 robot (modified for ABB mobile platforms).
  </description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>Proprietary</license>
  <author>Jon Tjerngren</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>abb_description_utilities</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
